# glob-intersection

./: LICENSE  README.md  glob-intersection.cabal
src/Data/: GlobIntersection.hs
tests/: Main.hs
tests/Data/GlobIntersection/: Tests.hs
