Cabal-version:  1.12
Name:           glob-intersection
Version:        0.1.0.0
Description:    Please see the README on GitHub at <https://github.com/jaspervdj/glob-intersection#readme>
Homepage:       https://github.com/jaspervdj/glob-intersection#readme
Bug-reports:    https://github.com/jaspervdj/glob-intersection/issues
Author:         Jasper Van der Jeugt
Maintainer:     m@jaspervdj.be
Copyright:      2022 Jasper Van der Jeugt
License:        BSD3
License-file:   LICENSE
Build-type:     Simple

Extra-source-files:
  README.md

Source-repository head
  type: git
  location: https://github.com/jaspervdj/glob-intersection

Library
  Hs-source-dirs:   src
  Default-language: Haskell2010
  Exposed-modules:  Data.GlobIntersection
  Build-depends:    base >= 4.7 && < 5

Test-suite glob-intersection-tests
  Hs-source-dirs:   tests
  Type:             exitcode-stdio-1.0
  Default-language: Haskell2010
  Main-is:          Main.hs
  Other-modules:    Data.GlobIntersection.Tests

  Build-depends:
    glob-intersection,
    base        >= 4.7  && < 5,
    tasty       >= 1.4  && < 1.5,
    tasty-hunit >= 0.10 && < 0.11
